Test footnote fix
Commenting out pointer-events:none

"CSS property value that prevents an element from receiving mouse events. When this property is applied to an element, it becomes "invisible" to mouse interactions, meaning that:

The element will not respond to clicks, hovers, or any other mouse events.
If the element is layered over other elements, those elements underneath will receive the mouse events instead."

--- a/components/blog/markdown-styles.module.css
+++ b/components/blog/markdown-styles.module.css
@@ -893,7 +893,7 @@
   right: -8px;
   bottom: -8px;
   left: -24px;
-  pointer-events: none;
+/*  pointer-events: none; */
   content: "";
   border: 2px solid #0969da;
   border-radius: 6px;
